--- a/app/src/main/res/layout/activity_alarm_on.xml
+++ b/app/src/main/res/layout/activity_alarm_on.xml
@@ -7,6 +7,16 @@
     android:background="@color/black"
     tools:context=".AlarmOnActivity">
 
+    <ImageView
+        android:id="@+id/imagee"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/cooku"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/stopbutton"
         android:layout_width="wrap_content"
@@ -16,5 +26,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85" />
 </androidx.constraintlayout.widget.ConstraintLayout>
