--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/black"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="@string/set_alarm"
         android:textSize="50dp"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/SettingAlarm"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:timePickerMode="clock"
+        android:numbersBackgroundColor="#BC8EEB"
+        android:numbersTextColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/Time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
