--- a/app/src/main/res/layout/activity_object_detection.xml
+++ b/app/src/main/res/layout/activity_object_detection.xml
@@ -16,4 +16,24 @@
         android:layout_height="match_parent"
         android:background="#000"
         android:id="@+id/imageView"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sample"
+        android:id="@+id/randomText"
+        android:textSize="40dp"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="570dp"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="655dp"
+        android:id="@+id/randomButton"
+        android:layout_centerHorizontal="true"
+        android:text="Next Object" />
 </RelativeLayout>
