--- a/app/src/main/res/layout/activity_object_detection.xml
+++ b/app/src/main/res/layout/activity_object_detection.xml
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="sample"
+        android:text="Loading..."
         android:id="@+id/randomText"
         android:textSize="40dp"
         android:textColor="@color/white"
