--- a/app/src/main/res/layout/activity_alarm_on.xml
+++ b/app/src/main/res/layout/activity_alarm_on.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,15 +7,15 @@
     android:background="@color/black"
     tools:context=".AlarmOnActivity">
 
-    <ImageView
-        android:id="@+id/imagee"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/cooku"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
 
-        app:layout_constraintTop_toTopOf="parent" />
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gif"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/splagif"
+        app:layout_constraintBottom_toBottomOf="@id/stopbutton"
+        android:layout_centerVertical="true"
+        />
 
     <Button
         android:id="@+id/stopbutton"
@@ -23,9 +23,8 @@
         android:layout_height="wrap_content"
         android:text="Stop"
         android:textSize="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_below="@+id/gif"
+        android:layout_centerHorizontal="true"
+
+         />
+</RelativeLayout>
