--- a/app/src/main/res/layout/activity_alarm_on.xml
+++ b/app/src/main/res/layout/activity_alarm_on.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/white"
     tools:context=".AlarmOnActivity">
 
 
@@ -16,6 +16,19 @@
         app:layout_constraintBottom_toBottomOf="@id/stopbutton"
         android:layout_centerVertical="true"
         />
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gif2"
+        android:layout_width="100dp"
+        android:layout_above="@id/gif"
+        android:layout_centerHorizontal="true"
+        android:layout_height="100dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/clock"
+        app:layout_constraintBottom_toBottomOf="@id/stopbutton"
+        android:layout_centerVertical="true"
+        />
+
 
     <Button
         android:id="@+id/stopbutton"
