--- a/app/src/main/res/layout/activity_object_detection.xml
+++ b/app/src/main/res/layout/activity_object_detection.xml
@@ -35,5 +35,5 @@
         android:layout_marginTop="655dp"
         android:id="@+id/randomButton"
         android:layout_centerHorizontal="true"
-        android:text="Next Object" />
+        android:text="Change Object" />
 </RelativeLayout>
